--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue2-google-maps": "^0.10.7"
+    "vue2-google-maps": "^0.10.7",
+    "stylus-loader": "^3.0.2",
+    "stylus": "^0.54.7"
   },
   "devDependencies": {
     "@vue/cli": "^3.11.0",
