--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10",
-    "vue2-google-maps": "^0.10.7",
+    "axios": "^0.19.0",
+    "core-js": "^2.6.9",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "stylus": "^0.54.7"
+    "vue": "^2.6.10",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
+    "defaultable": "^0.7.2",
+    "cluster": "^0.7.7",
+    "dns": "^0.2.2",
+    "master": "0.0.9",
+    "repl": "^0.1.3",
     "@vue/cli": "^3.11.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
@@ -22,6 +28,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^6.4.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.2.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
